# dex-inspector

./: .gitignore  BinaryReader.cpp  BinaryReader.h  CMakeLists.txt  DEVELOPMENT.md  DalvikDisassembler.cpp  DalvikDisassembler.h  DexFile.cpp  DexFile.h  DexParser.cpp  DexParser.h  DexStatistics.cpp  DexStatistics.h  IMPLEMENTATION_SUMMARY.md  Leb128.cpp  Leb128.h  QUICKSTART.md  README.md  create_test_dex.py  main.cpp  test.dex
sections/: ClassData.cpp  ClassData.h  ClassDefs.cpp  ClassDefs.h  CodeItem.cpp  CodeItem.h  DexHeader.h  EncodedField.cpp  EncodedField.h  EncodedMethod.cpp  EncodedMethod.h  FieldIds.cpp  FieldIds.h  MethodIds.cpp  MethodIds.h  ProtoIds.cpp  ProtoIds.h  StringIds.cpp  StringIds.h  TypeIds.cpp  TypeIds.h
